
TORQUE now needs to be set up with a mom hierarchy file (located in 
mom_priv/mom_hierarchy) specifying in what order each mom should report to 
pbs_server instead of each mom speaking directly to pbs_server.

TORQUE now includes a job_radix option (-W job_radix=X) to specify how
many moms each mom should communicate with for that job. Moms are then an 
n-branch tree communications-wise

Software Version 2.5.0

This file contains a few notes on building and installing TORQUE and 
Release notes concerning some of the new features of this release.

		                   	-------- WARNING! --------

TORQUE 2.5 Array Changes - WARNING: TORQUE 2.5 Job Arrays are not backwards
compatible, you MUST NOT upgrade to this from 2.3 or 2.4 while you have job
arrays queued - See README.array_changes for more details.

---------------------------------------------------------------------------
CONTENTS

   This document contains the following sections:
     
     * Overview
     * What's New
     * Requirements
     * Installation

--------------------------------------------------------------------------
OVERVIEW

    Enhanced job array functionality and Cygwin compatibility are the two
    main new features of TORQUE 2.5.0. Several other minor enhancements 
    have also been added to TORQUE 2.5.0 along with several bug fixes.
    For a complete list of changes see CHANGELOG.
    
---------------------------------------------------------------------------
WHAT'S NEW

    Completed job information can now be logged. A new Boolean server parameter 
    record_job_info can be set to TRUE and a log file will be created
    under $TORQUE_HOME/job_logs. The log file is in XML format and 
    contains the same information that would be produced by qstat -f.

    The serverdb file which contains the queue and server configuration
    data can optionally be converted to XML format. If you configure 
    TORQUE with the --enable-server-xml option the serverdb file will